infra-code-manifests/kubernetes-dashboard/dash-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-route
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: greencap-gateway
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - "kubernetes-dashboard.greencap"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kubernetes-dashboard
      port: 443
      weight: 1
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Forwarded-Proto
          value: https
