infra-code-manifests/kubernetes-dashboard/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-dash-route
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: greencap-gateway
    namespace: default
    sectionName: websecure
  hostnames:
  - "kubernetes-dashboard.greencap"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kubernetes-dashboard
      port: 443
